# core

./: .gitignore  README.md  pyproject.toml  requirements.txt
core/account/: interface.py
core/investment/: interface.py
core/operation/: interface.py
core/operation/purchase/: interface.py
core/operation/sell/: interface.py
core/portfolio/: interface.py
core/product/: interface.py
core/transaction/: historic.py  interface.py
core/wallet/: interface.py
